--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="Image">
-                <img src="passion.jpg" alt="passion image" width="400px">
+                <img src="./passion.jpg" alt="passion image" width="400px">
             </div>
         </div>
         <div class="info-head">Some random information</div>
